现在可以在Blog里面也添加评论了，但是位置还需要调整一下（如果可以的话）

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,6 @@
   --ifm-code-font-size: 95%; /* 代码字体大小保持一致 */
   --docusaurus-highlighted-code-line-bg: rgba(232, 26, 115, 0.1); /* 高亮行背景色 */
 }
+
+/* src/css/custom.css */
+
